force-app/main/default/objects/Commision_User_Override__c.object
<CustomObject>
    <description>Allows to override certain relationships and values for commission payout purposes.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this override active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Begin_Date__c</fullName>
        <inlineHelpText>Begin date for this override</inlineHelpText>
        <label>Begin Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Best_Of__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, this allows the better of the override or the calculation from base commission Attainment schedule. Note this does not check against original sales team attainment schedule and any overridden attainment schedule.</inlineHelpText>
        <label>Best Of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Attainment_Schedule_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Override employees attainment schedule that the team they reside on attains and use this attainment schedule instead.  Note, dollars will still aggregate to their assigned team, just individual dollars will run through this attainment schedule.</inlineHelpText>
        <label>Commission Attainment Schedule Override</label>
        <referenceTo>Commission_Attainment_Schedule__c</referenceTo>
        <relationshipName>Commission_User_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Percent_Override__c</fullName>
        <inlineHelpText>A value in this box and in conjunction with Best Of checkbox will set an override percentage on the commission employee attained value record thus guaranteeing a specific percent value irregardless of actual attainment schedule</inlineHelpText>
        <label>Commission Percent Override</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Period_Payout__c</fullName>
        <inlineHelpText>Allows to provide a base payment for a commission period no matter what actual attainment is.  Combined with best of checkbox will determine if this is absolute or based on attainment</inlineHelpText>
        <label>Commission Period Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Sales_Rep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Represents the sales rep that this override is associated with</inlineHelpText>
        <label>Commission Sales Rep</label>
        <referenceTo>Commission_Sales_Rep__c</referenceTo>
        <relationshipLabel>Commission User Overrides</relationshipLabel>
        <relationshipName>Commission_User_Overrides</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>End Date for this override</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Commission User Override</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Begin_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>Commission_Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commision User Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission User Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Atleast_One</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK( Commission_Attainment_Schedule_Override__c ),
ISNULL( Commission_Percent_Override__c ),
ISNULL(  Commission_Period_Payout__c )
)</errorConditionFormula>
        <errorMessage>At least one of the override should present</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Single_Style_Override</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !ISNULL(Commission_Period_Payout__c  ) ,!ISNULL(Commission_Percent_Override__c  ) )</errorConditionFormula>
        <errorMessage>Can only have either a period payout or a percent override not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_vs_Schedule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Commission_Attainment_Schedule_Override__r.Calculation_Type__c, &apos;Step&apos;)  , Commission_Sales_Rep__r.Commission_Team__r.Team__c ,  ISPICKVAL(Commission_Sales_Rep__r.Commission_Team__r.Team_Payment_Method__c, &apos;Individual Contribution&apos;)  )</errorConditionFormula>
        <errorMessage>The selected schedule configuration is not compatible with current Team configuration.</errorMessage>
    </validationRules>
</CustomObject>